--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
-<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= render "shared/navbar" %>
+  <%= yield %>
+  <%= render "shared/footer" %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 </body>
 </html>
