--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -2,26 +2,33 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-md-4 col-md-offset-2">
-        <h2 class="text-center"> Recipe </h2>
-        <ul class="list-group text-center">
-          <% @cocktail.doses.each do |dose|%>
-            <li>
-              <%= dose.description %>
-              <%= link_to "Delete", cocktail_dose_path(@cocktail, dose), :method => :delete %>
-            </li>
-          <% end %>
-        </ul>
-        <%= link_to "Add a dose", new_cocktail_dose_path(@cocktail), class: "btn btn-primary" %>
+      <h2 class="text-center"> Recipe </h2>
+      <ul class="list-group text-center">
+        <% @cocktail.doses.each do |dose|%>
+          <li>
+            <%= dose.description %>
+            <%= link_to "Delete", cocktail_dose_path(@cocktail, dose), :method => :delete %>
+          </li>
+        <% end %>
+      </ul>
     </div>
-    <div class="col-xs-12 col-md-4 col-md-offset-2">
-        <h2 class="text-center"> Raw Ingredients </h2>
-        <ul class="list-group text-center">
-          <% @cocktail.doses.each do |dose|%>
-            <li><%= dose.ingredient.name %></li>
-          <% end %>
-        </ul>
-      </div>
+    <div class="col-xs-12 col-md-4">
+      <h2 class="text-center"> Raw Ingredients </h2>
+      <ul class="list-group text-center">
+        <% @cocktail.doses.each do |dose|%>
+          <li><%= dose.ingredient.name %></li>
+        <% end %>
+      </ul>
     </div>
+  </div>
+  <hr>
+  <div class="col-xs-12 col-sm-6 col-sm-offset-3">
+    <h2> Add a dose for the <%= @cocktail.name %></h2>
+    <%= simple_form_for [@cocktail, @dose] do |f| %>
+      <%= f.input :ingredient_id, label: "Which ingredient?", collection: @ingredients %>
+      <%= f.input :description %>
+      <%= f.button :submit, class: "btn-primary"%>
+    <% end %>
   </div>
 </div>
 
