--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,24 +1,16 @@
 <%= render "banner", cocktail: @cocktail.name %>
 <div class="container">
   <div class="row">
-    <div class="col-xs-12 col-md-4 col-md-offset-2">
+    <div class="col-xs-12 col-sm-6 col-sm-offset-3">
       <h2 class="text-center"> Recipe </h2>
       <ul class="list-group text-center">
         <% @cocktail.doses.each do |dose|%>
           <li>
-            <%= dose.description %> |
+            <%= dose.description %> <%= dose.ingredient.name %> |
             <%= link_to cocktail_dose_path(@cocktail, dose), :method => :delete do %>
               <i class="fa fa-trash-o"></i>
             <%end%>
           </li>
-        <% end %>
-      </ul>
-    </div>
-    <div class="col-xs-12 col-md-4">
-      <h2 class="text-center"> Raw Ingredients </h2>
-      <ul class="list-group text-center">
-        <% @cocktail.doses.each do |dose|%>
-          <li><%= dose.ingredient.name %></li>
         <% end %>
       </ul>
     </div>
