changing cocktail model to take pictures from s3

--- a/app/views/cocktails/_card.html.erb
+++ b/app/views/cocktails/_card.html.erb
@@ -1,5 +1,5 @@
 <div class="card">
-      <span class="card-bg" style="background-image:url(<%= cocktail.picture %>)"></span>
+      <span class="card-bg" style="background-image:url(<%= cocktail.picture.url(:thumb) %>)"></span>
       <span class="card-shadow"></span>
       <span class="card-text">
         <h2><%= cocktail.name %></h2>
