--- a/app/views/cocktails/_banner.html.erb
+++ b/app/views/cocktails/_banner.html.erb
@@ -1,4 +1,4 @@
-<div class="banner text-center" style="background-image: url(<%=@cocktail.picture%>)">
+<div class="banner text-center" style="background-image: url(<%=@cocktail.picture.url(:medium)%>)">
   <div class="banner-shadow"></div>
   <div class="banner-content">
     <h1> <%= cocktail %> </h1>
